Add park name to show page.

--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -1,5 +1,9 @@
 <div>
-<p><%= @park.description %></p>
+    <h1><%= @park.name %></h1>
+</div>
+
+<div>
+    <p><%= @park.description %></p>
 </div>
 
 <% if false %>
